# job-seeker

./: .env.example  .gitignore  235.ipynb  docker-compose.yaml  pyproject.toml  readme.md  reqs.txt  start.sh
airflow/dags/: job_ingester.py
airflow/dags/getters/: cj_jobs.py  muse_jobs.py  reek_jobs.py
airflow/dags/getters/utils/: formatters.py  validators.py
dags/: job_ingester.py
dags/getters/: cj_jobs.py  muse_jobs.py  reek_jobs.py
source/db/: create_db.py  models.py  utils.py
source_db/: create_db.py  models.py  utils.py
sql/: stats.sql
src/: create_db.py  models.py  utils.py
stats-utils/: stats.sql
